# zutils

./: .editorconfig  .gitignore  .squash-staged.sh  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  tasks.py
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/schemata/: initial_build_schema.md
.github/workflows/: ci.yml  docs.yml  release.yml
doc/: build.md  design.md  setup.md  test.md  troubleshooting.md
docs/: about.md  build.md  conf.py  design.md  developer-guide.rst  docker.md  downstream-testing.md  examples.rst  getting-started.rst  index.rst  manifest.md  setup.md  test.md  troubleshooting.md  user-guide.rst  with-nanvix.md
docs/api/: buildroot.rst  config.rst  exitcodes.rst  github.rst  index.rst  log.rst  script.rst  sysroot.rst
etc/.zed/: settings.json
examples/bin-hello/: README.md  z.ps1  z.sh
examples/bin-hello/.nanvix/: .gitignore  _test.py  nanvix.toml  sysroot  z.py
examples/bin-hello/src/: main.c
examples/hello-transitive/: Makefile.nanvix  README.md  z  z.ps1  z.sh
examples/hello-transitive/.nanvix/: nanvix.toml  z.py
examples/hello-transitive/src/: hello.c
examples/hello-world/: Makefile  Makefile.nanvix  README.md  z  z.ps1  z.sh
examples/hello-world/.nanvix/: nanvix-requirements.txt  nanvix.toml  z.py
examples/hello-world/src/: hello.c  hello.py  main.c
examples/hello-zlib/: Makefile.nanvix  README.md  nanvix-requirements.txt  z.sh
examples/hello-zlib/.nanvix/: .gitignore  nanvix-requirements.txt  nanvix.toml  z.py
examples/hello-zlib/src/: hello-zlib.c
examples/lib-hello/: README.md  z.ps1  z.sh
examples/lib-hello/.nanvix/: .gitignore  nanvix.toml  z.py
scripts/: bump-version.py  consumer-repos.json  downstream.schema.json  release.py  test-downstream.ps1  test-downstream.sh
scripts/downstream/: downstream.py  downstream.schema.json  test-downstream.ps1  test-downstream.sh  wrapper.py
src/downstream_tests/: __main__.py  checkout.py  cli.py  config.py  fallback.py  log.py  runner.py  validation.py  wheel.py
src/nanvix_zutil/: __init__.py  __main__.py  buildroot.py  cli.py  config.py  constants.py  distclean_cmd.py  docker.py  exitcodes.py  format_cmd.py  github.py  helpers.py  info.py  lint_cmd.py  lockfile.py  log.py  manifest.py  matrix.py  matrix_cmd.py  paths.py  release.py  requirements.py  resolve_cmd.py  resolver.py  script.py  sysroot.py  utils.py
templates/: .gitignore  nanvix-ci.yml  z  z.ps1  z.sh
templates/ci/: prune-releases.yml
tests/: __init__.py  conftest.py  test_buildroot.py  test_cli.py  test_cli_lock.py  test_config.py  test_distclean_cmd.py  test_docker.py  test_example.py  test_example_bin_hello.py  test_example_transitive.py  test_example_zlib.py  test_examples.py  test_format_cmd.py  test_github.py  test_info.py  test_integration.py  test_lint_cmd.py  test_lockfile.py  test_log.py  test_main.py  test_manifest.py  test_matrix.py  test_matrix_cmd.py  test_release.py  test_requirements.py  test_resolve_cmd.py  test_resolver.py  test_script.py  test_sysroot.py  testutils.py
(+17 files in other folders)
