# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanvix-zutil"
version = "0.1.0"
description = "Build orchestration utilities for the Nanvix ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "black",
  "basedpyright",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/nanvix/zutils"
Repository = "https://github.com/nanvix/zutils"

[tool.hatch.build.targets.wheel]
packages = ["src/nanvix_zutil"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
