# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanvix-zutil"
version = "0.7.22"
description = "Build orchestration utilities for the Nanvix ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
  "black",
  "basedpyright",
  "pytest",
  "yamllint",
]

[project.scripts]
nanvix-zutil = "nanvix_zutil.__main__:main"
nanvix-info = "nanvix_zutil.info:main"

[project.urls]
Homepage = "https://github.com/nanvix/zutils"
Repository = "https://github.com/nanvix/zutils"

[tool.hatch.build.targets.wheel]
packages = ["src/nanvix_zutil"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
